--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "chart.js": "^4.4.4",
+    "date-fns": "^4.1.0",
     "firebase": "^11.6.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
@@ -18,6 +19,7 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
     "react-spinners": "^0.14.1",
+    "recharts": "^2.15.3",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
