--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "chart.js": "^4.4.4",
     "date-fns": "^4.1.0",
     "firebase": "^11.6.1",
+    "framer-motion": "^12.11.3",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
