--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.9.0",
     "chart.js": "^4.4.4",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.5.0",
     "firebase": "^11.6.1",
+    "firebase-functions": "^6.3.2",
     "framer-motion": "^12.11.3",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
